# atlas

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  OUTLINE.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ingest.yml
apps/: llm.py
apps/api/: app.py  helpers.py
apps/web/: .env.production  Caddyfile  Dockerfile  README.md  package.json  pnpm-lock.yaml  railpack.json  svelte.config.js
apps/web/src/lib/: api.ts  types.ts
apps/web/src/routes/: +layout.svelte  +page.svelte  +page.ts
apps/web/src/routes/papers/[id]/: +page.svelte  +page.ts
apps/worker/: cron_ingest.py  ingestor.py  jobs.py  processor.py  shared.py
infra/: postgres.py  redis.py
