[project]
name = "papers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.135.1",
    "feedparser>=6.0.12",
    "google-cloud-storage>=3.9.0",
    "more-itertools>=10.8.0",
    "numpy>=2.4.3",
    "ollama>=0.6.1",
    "openai>=2.26.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "pymupdf>=1.27.2",
    "pypdf2>=3.0.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "redis>=7.3.0",
    "requests>=2.32.5",
    "rq>=2.7.0",
    "ruff>=0.15.6",
]